# learning-python-full-notes

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/chapter_01/: 01_core_concepts.ipynb  02_control_structures.ipynb  03_functional_programming.ipynb  04_strings_and_unicode.ipynb  05_type_hints_intro.ipynb  README.md  __init__.py
src/chapter_02/: 01_variables_and_binding.ipynb  02_scope_and_namespaces.ipynb  03_static_analysis_mypy.ipynb  04_type_annotations_deep_dive.ipynb  README.md  __init__.py
src/chapter_03/: 01_classes_and_objects.ipynb  02_methods_and_attributes.ipynb  03_inheritance_and_mro.ipynb  04_encapsulation_and_access_control.ipynb  README.md  (+1 more)
tests/: conftest.py  test_chapter_01.py  test_chapter_02.py  test_chapter_03.py  test_chapter_04.py  test_chapter_05.py  test_chapter_06.py  test_chapter_07.py  test_chapter_08.py  test_chapter_09.py  test_chapter_10.py  test_chapter_11.py  test_chapter_12.py  test_chapter_13.py  test_chapter_14.py  test_chapter_15.py  test_chapter_16.py  test_chapter_17.py  test_chapter_18.py  test_chapter_19.py  test_chapter_20.py  test_chapter_21.py  test_chapter_22.py  test_chapter_23.py  test_chapter_24.py  test_chapter_25.py  test_chapter_26.py  test_chapter_27.py  test_chapter_28.py  test_chapter_29.py  test_chapter_30.py  test_chapter_31.py  test_chapter_32.py  test_chapter_33.py  test_chapter_34.py  test_chapter_35.py  test_chapter_36.py  test_chapter_37.py  test_chapter_38.py  test_chapter_39.py  (+2 more)
(+191 files in other folders)
